--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LearnCoroutinesBasic</string>
+    <string name="hello_co_routines">Hello Co-routines</string>
 </resources>
